[tool.poetry]
name = "anthropic-iterative-search"
version = "0.0.1"
description = "A virtual research assistant with the ability to search Documentation and answer questions"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.1"
langchain-anthropic = "^0.1.4"
pinecone-client = "^3.0.0"
langchain-openai = "^0.1.3"
pinecone-text = "^0.1.0"
langchain-community = "^0.0.34"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.21"

[tool.langserve]
export_module = "anthropic_iterative_search"
export_attr = "chain"

[tool.templates-hub]
use-case = "research"
author = "LangChain"
integrations = ["Anthropic", "Documentation-Site"]
tags = ["research", "agents"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
